--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
-  "name": "osapiens-v2",
+  "name": "osapiens",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "author": {
-    "name": "RNE"
-  },
-  "keywords": [
-    "react-native",
-    "react-native-elements",
-    "react-native-template",
-    "expo"
-  ],
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^47.0.12",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "@rneui/base": "4.0.0-rc.7",
-    "@rneui/themed": "4.0.0-rc.7"
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/native": "^6.1.18",
+    "@rneui/base": "4.0.0-rc.8",
+    "@rneui/themed": "4.0.0-rc.8",
+    "expo": "~51.0.38",
+    "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "4.0.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.26.0",
+    "@types/react": "~18.2.79",
+    "jest": "^29.7.0",
+    "jest-expo": "~51.0.4",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
