--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "4.0.0",
