--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.18",
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
     "expo": "~51.0.38",
     "expo-font": "~12.0.10",
@@ -42,7 +43,6 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~18.2.79",
-    "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
