--- a/package.json
+++ b/package.json
@@ -8,10 +8,24 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native|@react-native(-community)|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|sentry-expo|native-base?|@rneui)"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -19,7 +33,6 @@
     "@react-navigation/native": "^6.1.18",
     "@rneui/base": "4.0.0-rc.8",
     "@rneui/themed": "4.0.0-rc.8",
-    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
     "expo": "~51.0.38",
     "expo-font": "~12.0.10",
@@ -42,9 +55,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.2.79",
+    "@types/react-test-renderer": "^18.3.0",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.3.1",
     "typescript": "~5.3.3"
   },
   "private": true
