--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "jest": {
     "preset": "jest-expo",
@@ -55,14 +56,24 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@eslint/js": "^9.14.0",
     "@testing-library/react-native": "^12.8.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.3.0",
+    "eslint": "^8.57.1",
+    "eslint-config-expo": "~7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
+    "prettier": "^3.3.3",
     "react-test-renderer": "^18.3.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^8.14.0"
   },
   "private": true
 }
